--- a/templates/counselor/counselor_home.html
+++ b/templates/counselor/counselor_home.html
@@ -616,11 +616,11 @@ th, td {
                             
                             <a href="{% url 'counselor_view_schedule' %}" class="nav__link">
                                 <i class='bx bx-calendar nav__icon' ></i>
-                                <span class="nav__name">View Schedule</span>
+                                <span class="nav__name">Schedules</span>
                             </a>
     <a href="{% url 'counselor_view_feedback' %}" class="nav__link">
                                 <i class='bx bx-note nav__icon' ></i>
-                                <span class="nav__name">View Feedback</span>
+                                <span class="nav__name">Feedbacks</span>
                             </a>
                             
                         </div>
