--- a/templates/admin/upload_another_student.html
+++ b/templates/admin/upload_another_student.html
@@ -1,42 +1,19 @@
-{% extends "director/director_home.html" %}
+{% extends "admin/admin_home.html" %}
+{% block title %} Upload Another Student {% endblock %}
+{% block content %}
 
-
-
-{% block content %} 
 <style>
-.offering{
+.faculty{
   box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2);
   transition: 0.3s;
-  width: 600px;
-  height: 300px;
+  width: 50%;
+  height: 320px;
   border-radius: 5px;
   background-color: #98b4ac;
   float: center;
-margin: auto;
-  text-align: center;
+  margin: auto;
    line-height: 40px; 
 }
-#id_semester{
-  width: 150px;
-}
-#id_school_year{
-  width: 200px;
-}
-.column{
- width:250px;
- float:center;
- margin-left: 10px;
- padding: 10px;   
- text-align: left;
-}
-.row{
- width: 450px;
- float:center;
- text-align: left;
-}
-
-
-/* BUTTONS */
 .wrap {
   height: 100%;
   display: flex;
@@ -46,6 +23,7 @@ margin: auto;
 }
 
 .button {
+  margin: 0 auto;
   width: 140px;
   height: 30px;
   font-family: 'Roboto', sans-serif;
@@ -61,7 +39,6 @@ margin: auto;
   transition: all 0.3s ease 0s;
   cursor: pointer;
   outline: none;
-
   }
 
 .button:hover {
@@ -79,6 +56,7 @@ margin: auto;
 
 .buttonF {
   position: fixed;
+
 width: 100%;
 min-width: 1320px;
 height: 60px;
@@ -96,47 +74,34 @@ transition: all 0.3s ease 0s;
 cursor: pointer;
 outline: none;
   }
-#id_program_designation{
-  width: 95px;
-}
+  .input{
+    margin: 0 auto;
+  height: 30px;
+  font-weight: 500;
+  }
 
-.bText{
-  color: #fff;
-}
 </style>
-
 <div class="fac">
-  <button type="submit" class="buttonF">Assign Employee</button>
+  <button type="submit" class="buttonF"><b>Upload Another Student</b></button>
 </div> 
-
-  <div class="input">
+<br> <br> <br> <br>
+<div class="faculty">
 <br>
-{% for message in messages %}    
-<center><p><b>{{message}} !</b></p></center>
-{% endfor %}
-<br>
-
-<div class="offering">
-
-
-  <form method="POST" action="">
+  <form method="post" enctype="multipart/form-data">
     {% csrf_token %}
-   
-        <p class="pText"><b class="bText">First Name: &nbsp;</b> {{form1.firstname}}</p>
-        <p class="pText"><b class="bText">Last Name: &nbsp;</b>  {{form1.lastname}}</p>
-        <p class="pText"><b class="bText">Program Designation: &nbsp;</b> {{form1.program_designation}}</p>
-        &nbsp;    &nbsp;   
-     
-          <button type="submit" class="button">Submit</button>
-        
-</form>
+    <center><input type="file" name="myfile" class="input"></center>
+   <br> <br>
+    <div class="wrap">
+      <button type="submit" class="button">Upload</button>
+    </div>
+  </form>
+  {% for message in messages %}
+  <center> <b><p>{{message}} !</p> </b></center>
+{% endfor %}
 
-  </div>
+                
+</div>
 
+  {% endblock %}
 
-
-{% endblock %}
-
-
-
-
+  
