--- a/templates/student/another_sched.html
+++ b/templates/student/another_sched.html
@@ -243,17 +243,21 @@ cursor: pointer;
 outline: none;
   }
   </style>
+
+  <form method="POST" action="{% url 'student_view_another_sched' %}">
+          {% csrf_token %}
+          {{ offer.pickedDate }}
+        
+      <div class="wrap">
+                <button type="submit" class="button">Submit</button>
+              </div>
+      </form>
   <div class="fac">
     <button type="submit" class="buttonF">{{today}},  {{day_name}}</button>
   </div> 
   <br>
 
-    <a style="color: #504A4B" 
-  href="{% url 'student_view_another_sched' 1 %}"> 
-           <div class="facDay">
-          <button type="submit" class="buttonDay">Click here to view next day</button>
-        </div> 
-</a> 
+  
 <br>
     <table class="table-fill">
     <thead style="height: 20px;">
